syntax = "proto3";

package pb;

option go_package = "../pb";

message Block {
    BlockHeader header = 1;
    repeated bytes transactions = 2;
    BlockExtra extra = 3;
}

message BlockExtra {
    int64 size = 1;
}

message BlockHeader {
    uint64 number = 1;
    bytes state_root = 2;
    bytes tx_root = 3;
    bytes receipt_root = 4;
    bytes parent_hash = 5;
    int64 timestamp = 7;
    uint64 epoch = 8;
    bytes bloom = 9;
    uint64 proposer_node_id = 10;
    uint64 gas_price = 11;
    uint64 gas_used = 12;
    bytes total_gas_fee = 13;
    bytes gas_fee_reward = 14;
}

message BlockBody {
    repeated bytes transactions = 1;
    BlockExtra extra = 2;
}